--- a/resources/angular-views/screenings/live/index.html
+++ b/resources/angular-views/screenings/live/index.html
@@ -16,7 +16,6 @@
         </div>
     </header>
 
-    <!-- Test progress -->
     <div ng-if="!global.data.isFetchingLiveScreening && screening.id > 0">
 
         <!-- Container -->
@@ -102,28 +101,41 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-7">
+                    <div class="col-lg-7 screening-details">
 
-                        <ui-editable-standalone-field
-                            data-model="screeningMovement"
-                            data-key="title"
-                            data-empty="Title"
-                            data-input-type="text"
-                            data-save="saveScreeningMovement"
-                            data-save-callback="saveScreeningMovementCallback">
-                        </ui-editable-standalone-field>
-
-                        <!--  -->
                         <div class="row">
-                            <div class="col-sm-12">
-                                Record, Save, ...
+                            <div class="col-lg-2 text-right">
+                                Title
+                            </div>
+
+                            <div class="col-lg-10">
+                                <ui-editable-standalone-field
+                                    data-model="screeningMovement"
+                                    data-key="title"
+                                    data-empty="Title"
+                                    data-input-type="text"
+                                    data-save="saveScreeningMovement"
+                                    data-save-callback="saveScreeningMovementCallback">
+                                </ui-editable-standalone-field>
                             </div>
                         </div>
 
-                        <!--  -->
+                        <!-- Scoring, Saving -->
                         <div class="row">
                             <div class="col-sm-12">
-                                <textarea class="form-control" placeholder="General Notes:"></textarea>
+                            </div>
+                        </div>
+
+                        <!-- Screening notes -->
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <ui-editable-standalone-field
+                                    data-model="screeningMovement"
+                                    data-key="notes"
+                                    data-empty="General Notes"
+                                    data-save="saveScreeningMovement"
+                                    data-save-callback="saveScreeningMovementCallback">
+                                </ui-editable-standalone-field>
                             </div>
                         </div>
                     </div>
@@ -134,10 +146,12 @@
             <div class="col-lg-3">
                 <div class="col-sm-12">
                     <div class="screening-progress">
+
+                        <br>
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="screening-progress-heading">
-                                    <div class="movement-title">Test</div>
+                                    <div class="movement-title active">Test</div>
                                     <div class="movement-score">Score</div>
                                 </div>
                             </div>
@@ -156,7 +170,12 @@
                                     ng-repeat="movement in screening.movements track by movement.id"
                                     class="screening-progress-movement-row">
 
-                                    <a ng-click="screeningMovement = movement" href="javascript:;" class="movement-title">
+                                    <a
+                                        ng-click="setScreeningMovement(movement)"
+                                        href="javascript:;"
+                                        class="movement-title"
+                                        ng-class="{active: movement.id == screeningMovement.id}">
+
                                         {{ movement.title }}
                                     </a>
 
