Refactoring organize screen

--- a/resources/angular-views/profile/list.html
+++ b/resources/angular-views/profile/list.html
@@ -13,7 +13,7 @@
         <ui-filesystem
             data-id="profiles-explorer"
             data-files="profileList"
-            data-default-layout="small-tiles"
+            data-default-layout="large-tiles"
             data-hide-location="true"
             data-config="uiFilesystemConfig"
             class="col-sm-12">
