integrated all filesystem views

--- a/resources/angular-views/group/list.html
+++ b/resources/angular-views/group/list.html
@@ -26,7 +26,7 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        Team Details
+                        Add a Team
                     </div>
 
                     <div class="modal-body">
