--- a/resources/angular-views/profile/list.html
+++ b/resources/angular-views/profile/list.html
@@ -24,7 +24,7 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        Profile Details
+                        Add an Athlete
                     </div>
 
                     <div class="modal-body">
