Updates to uiFilesystem directive

--- a/resources/angular-views/group/list.html
+++ b/resources/angular-views/group/list.html
@@ -18,6 +18,7 @@
             data-default-layout="large-tiles"
             data-hide-location="true"
             data-config="uiFilesystemConfig"
+            data-is-loading="isLoading"
             class="col-sm-12">
         </ui-filesystem>
 
