--- a/resources/angular-views/movements/explorer/index.html
+++ b/resources/angular-views/movements/explorer/index.html
@@ -32,7 +32,7 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        New Folder
+                        Create a Folder
                     </div>
 
                     <div class="modal-body">
