--- a/resources/angular-views/profile/list.html
+++ b/resources/angular-views/profile/list.html
@@ -16,35 +16,12 @@
             data-default-layout="large-tiles"
             data-hide-location="true"
             data-config="uiFilesystemConfig"
+            data-is-loading="isLoading"
             class="col-sm-12">
         </ui-filesystem>
 
         <!-- New profile modal form -->
-        <div class="modal fade" id="createProfileForm">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        Add an Athlete
-                    </div>
-
-                    <div class="modal-body">
-
-                        <h1 class="text-center text-muted">
-                            In Development.
-                        </h1>
-                    </div>
-
-                    <div class="modal-footer text-center">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">
-                            Cancel
-                        </button>
-                        <button type="button" class="btn btn-primary" data-dismiss="modal">
-                            Create
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <ng-include src="'profile/partials/new-profile-modal.html'"></ng-include>
     </div>
 
     <div ng-if="global.data.isFetchingProfiles === true" class="loading-notice">
