Working on analyze screen

--- a/resources/angular-views/movements/analysis/index.html
+++ b/resources/angular-views/movements/analysis/index.html
@@ -1,5 +1,7 @@
 
-<div class="page">
+<!-- Copyright Heddoko(TM) 2015, all rights reserved. -->
+
+<div class="page analysis-page">
     <header>
         <h1>
             Analyze <i class="fa fa-line-chart"></i>
@@ -7,7 +9,48 @@
         </h1>
     </header>
 
-    <h2 style="text-align: center; color: #ccc;">
-        In Development
-    </h2>
+    <!-- Analysis container -->
+    <div ng-if="!global.data.isFetchingAnalysisMovement && movement" class="page-padded">
+
+        <!-- Title -->
+        <div class="row">
+            <div class="col-lg-6">
+                <h3 class="title">
+                    <ui-editable-standalone-field
+                        data-model="movement"
+                        data-key="title"
+                        data-empty="Movement Title"
+                        data-input-type="text"
+                        data-save="saveMovementDetails"
+                        data-save-callback="saveMovementDetailsCallback">
+                    </ui-editable-standalone-field>
+
+                    <span></span>
+                </h3>
+            </div>
+        </div>
+
+        <!-- Layout -->
+        <ng-include src="'movements/analysis/layouts/' + layout + '.html'"></ng-include>
+
+        <!-- Movement details -->
+        <div class="row no-gutter">
+            <div class="col-sm-12">
+
+            </div>
+        </div>
+
+    </div>
+
+    <!-- Retrieving movement data -->
+    <div ng-if="global.data.isFetchingAnalysisMovement">
+        <ng-include src="'partials/loading.html'"></ng-include>
+    </div>
+
+    <!-- Movement not found -->
+    <div ng-if="!global.data.isFetchingAnalysisMovement && !movement">
+        <h2 class="text-center">
+            An Error Occurred :(
+        </h2>
+    </div>
 </div>
