--- a/resources/angular-views/group/view.html
+++ b/resources/angular-views/group/view.html
@@ -88,8 +88,9 @@
                         <div class="col-xs-6">
                             <ui-editable-field
                                 data-label="Sport"
-                                data-key="tags"
-                                data-type="tag">
+                                data-key="mainTag"
+                                data-type="tag"
+                                data-empty="Select a Sport">
                             </ui-editable-field>
                         </div>
 
